# text-recognizer

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.pytype/: .ninja_log  build.ninja
data/EMNIST/raw/: metadata.toml
docs/: conf.py  index.rst
notebooks/: 00-scratch-pad.ipynb  00-test-gpu.ipynb  00-testing-stuff-out.ipynb  01-look-at-emnist.ipynb  02a-sentence-generator.ipynb  02b-emnist-lines-dataset.ipynb  02b-look-at-emnist-lines.ipynb  03-look-at-barlow-twins-transforms.ipynb  03-look-at-iam-lines.ipynb  03-look-at-iam-paragraphs.ipynb  03a-line-prediction.ipynb  04-conv-transformer-experiment.ipynb  04-conv-transformer.ipynb  04-convnext.ipynb  04-efficientnet-transformer.ipynb  04-efficientnet.ipynb  04-mammut-lines.ipynb  04-quantizer.ipynb  04-vit-lines.ipynb  04-vq-transformer.ipynb  04-vqvae.ipynb  04a-look-at-iam-lines.ipynb  04b-look-at-iam-paragraphs-predictions.ipynb  04b-look-at-iam-paragraphs.ipynb  05-sanity-check-multihead-attention.ipynb  05a-UNet.ipynb  05a-test-end-to-end-model.ipynb  05c-test-model-end-to-end.ipynb  06-try-transformer-model-predictions.ipynb  Untitled.ipynb  Untitled1.ipynb
src/: .gitattributes
src/notebooks/: 00-testing-stuff-out.ipynb  01-look-at-emnist.ipynb  01b-dataset_normalization.ipynb  02b-emnist-lines-dataset.ipynb  02c-image-patches.ipynb  03a-line-prediction.ipynb  04-look-at-iam-paragraphs.ipynb  04a-look-at-iam-lines.ipynb  04b-look-at-iam-paragraphs.ipynb  05-sanity-check-multihead-attention.ipynb  05a-UNet.ipynb  06-try-transformer-model-predictions.ipynb  07-look-at-lexicon.ipynb  07-try-gtn.ipynb  Untitled.ipynb  tqdm.ipynb
src/tasks/: build_transitions.py  create_emnist_lines_datasets.sh  create_iam_paragraphs.sh  download_emnist.sh  download_iam.sh  make_wordpieces.py  prepare_experiments.sh  prepare_sample_experiments.sh  test_functionality.sh  train.sh  train_crnn_line_ctc_model.sh  train_embedding_model.sh
src/text_recognizer/: character_predictor.py  line_predictor.py  paragraph_text_recognizer.py  util.py
src/training/: gpu_manager.py  prepare_experiments.py  run_experiment.py  run_sweep.py  train.py
tasks/: create_emnist_lines_datasets.sh  create_iam_paragraphs.sh  make_wordpieces.py  prepare_experiments.sh  train.sh
tests/: test_cer.py  test_paragraph_text_recognizer.py
tests/support/: create_iam_lines_support_files.py
text_recognizer/: __init__.py  character_predictor.py  image_utils.py
text_recognizer/callbacks/: __init__.py  wandb_callbacks.py
text_recognizer/criterion/: __init__.py  n_layer_discriminator.py  vqgan_loss.py
text_recognizer/criterions/: barlow_twins.py  ctc.py  label_smoothing.py  n_layer_discriminator.py  transducer.py  vqgan_loss.py
text_recognizer/data/: __init__.py  base_data_module.py  base_dataset.py  base_mapping.py  build_transitions.py  download_utils.py  emnist.py  emnist_essentials.json  emnist_lines.py  emnist_mapping.py  iam.py  iam_extended_paragraphs.py  iam_lines.py  iam_lines_dataset.py  iam_paragraphs.py  iam_preprocessor.py  iam_synthetic_paragraphs.py  make_wordpieces.py  mapping.py  mappings.py  sentence_generator.py  tokenizer.py  transforms.py  util.py  word_piece_mapping.py
text_recognizer/datasets/: __init__.py  base_data_module.py  base_dataset.py  dataset.py  download_utils.py  emnist.py  emnist_essentials.json  emnist_lines.py  emnist_lines_dataset.py  iam_dataset.py  iam_paragraphs_dataset.py
text_recognizer/decoder/: greedy_decoder.py
text_recognizer/metadata/: __init__.py  emnist.py  emnist_lines.py  iam_lines.py  iam_paragraphs.py  iam_synthetic_paragraphs.py  shared.py
text_recognizer/model/: base.py  greedy_decoder.py  mammut.py  transformer.py
text_recognizer/models/: __init__.py  barlow_twins.py  base.py  conformer.py  crnn_model.py  dino.py  greedy_decoder.py  metrics.py  perceiver.py  segmentation_model.py  transformer.py  transformer_model.py  util.py  vq_transformer.py  vqgan.py  vqvae.py
text_recognizer/network/: convformer.py  cvit.py  mammut.py  vit.py
text_recognizer/networks/: __init__.py  base.py  beam.py  cnn.py  cnn_tranformer.py  cnn_transformer.py  conv_perceiver.py  conv_transformer.py  crnn.py  ctc.py  image_encoder.py  image_transformer.py  lenet.py  metrics.py  mlp.py  residual_network.py  stn.py  text_decoder.py  util.py  vision_transformer.py  vit.py  vq_transformer.py
text_recognizer/optimizer/: laprop.py
text_recognizer/tests/: __init__.py
text_recognizer/training/: run_experiment.py
text_recognizer/util/: image_utils.py
text_recognizer/weights/: CRNNModel_IamLinesDataset_ConvolutionalRecurrentNetwork_weights.pt  CharacterModel_EmnistDataset_DenseNet_weights.pt  CharacterModel_EmnistDataset_WideResidualNetwork_weights.pt
training/: artifacts.py  main.py  metadata.py  prepare_experiments.py  run.py  run_experiment.py  sweep_emnist.yml  sweep_emnist_resnet.yml  utils.py
training/callbacks/: wandb.py  wandb_callbacks.py
training/conf/: cnn_transformer.yaml  config.yaml
training/configs/: image_transformer.yaml  vqvae.yaml
training/experiments/: image_transformer.yaml
training/trainer/: train.py
wandb/: settings
wandb/run-20200731_144041-7eru0nzk/: config.yaml  wandb-events.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_144301-1x3qae54/: config.yaml  requirements.txt  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_145627-28kizbir/: config.yaml  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_150820-2tfrmzcg/: config.yaml  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_151247-3qj84a2y/: config.yaml  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_151432-39sgd0fs/: wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
wandb/run-20200731_151753-2e8ytus9/: config.yaml  wandb-events.jsonl  wandb-history.jsonl  wandb-metadata.json  wandb-summary.json
(+478 files in other folders)
