[tool.poetry]
name = "text-recognizer"
version = "0.1.0"
authors = ["aktersnurra <gustaf.rydholm@gmail.com>"]
description = "Text recognition software using best pratices in python."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aktersnurra/text-recognizer"
repository = "https://github.com/aktersnurra/text-recognizer"
keywords = ["text recognizer, deep learning, pytorch"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
omegaconf = "^2.1.0"
einops = "^0.3.0"
pytorch-lightning = "^1.6.3"
hydra-core = "^1.1.1"
smart-open = "^5.2.1"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = { extras = ["toml"], version = "^5.1" }
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"
typeguard = "^2.7.1"
wandb = "^0.12.16"
scipy = "^1.6.1"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
jupyterlab = "^3.0.15"
ipywidgets = "^7.6.3"
torchinfo = "^1.5.3"
jupyter = "^1.0.0"
h5py = "^3.6.0"
matplotlib = "^3.5.1"
boltons = "^20.1.0"
nltk = "^3.6.7"
defusedxml = "^0.7.1"
Pillow = "^9.0.0"
editdistance = "^0.5.3"
torchmetrics = "^0.4.1"
tqdm = "^4.46.1"
toml = "^0.10.1"
setuptools = "59.5.0"
opencv-python = "^4.5.5"
click = "^7.1.2"

[tool.coverage.report]
fail_under = 50

[tool.poetry.scripts]
download-emnist = "text_recognizer.data.emnist:download_emnist"
download-nltk = "text_recognizer.data.utils.sentence_generator:load_nltk_brown_corpus"
generate-emnist-lines = "text_recognizer.data.emnist_lines:generate_emnist_lines"
download-iam = "text_recognizer.data.iam:download_iam"
generate-iam-lines = "text_recognizer.data.iam_lines:generate_iam_lines"
generate-iam-paragraphs = "text_recognizer.data.iam_paragraphs:create_iam_paragraphs"
generate-iam-synthetic-paragraphs = "text_recognizer.data.iam_synthetic_paragraphs:create_synthetic_iam_paragraphs"
show-iam-extended-info = "text_recognizer.data.iam_extended_paragraphs:show_dataset_info"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
